@@ -1,3 +1,8 @@
+2007-09-02  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	* gdb.base/gcore-buffer-overflow.c, gdb.base/gcore-buffer-overflow.exp:
+	New files.
+
 2007-09-01  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* lib/gdb.exp (build_id_debug_filename_get): New function.
